[package]
name = "snowflake-me"
version = "0.5.0"
authors = ["houseme <housemecn@gmail.com> and housemen <houseme@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
homepage = "https://github.com/houseme/snowflake-rs"
repository = "https://github.com/houseme/snowflake-rs"
documentation = "https://docs.rs/snowflake-me/"
readme = "README.md"
keywords = ["snowflake", "random", "id", "generator", "uniqueness"]
categories = ["development-tools", "data-structures", "algorithms"]
edition = "2024"

[features]
default = []
ip-fallback = ["dep:pnet_datalink"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
thiserror = "2.0.14"
pnet_datalink = { version = "0.35.0", default-features = false, optional = true }
base64 = "0.22.1"

[dev-dependencies]
criterion = "0.7.0"
num_cpus = "1.17.0"

[[bench]]
name = "bench"
harness = false

