[package]
name = "snowflake_me"
version = "0.6.0"
authors = ["houseme <housemecn@gmail.com> and housemen <houseme@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
homepage = "https://github.com/houseme/snowflake-rs"
repository = "https://github.com/houseme/snowflake-rs"
documentation = "https://docs.rs/snowflake_me/"
readme = "README.md"
keywords = ["snowflake", "random", "id", "generator", "uniqueness"]
categories = ["development-tools", "data-structures", "algorithms"]
edition = "2024"

[features]
default = []
ip-fallback = ["dep:pnet_datalink"]
serde = ["dep:serde"]

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["now"] }
thiserror = "2.0.18"
pnet_datalink = { version = "0.35.0", default-features = false, optional = true }
base64 = "0.22.1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.2"
num_cpus = "1.17.0"
serde_json = "1"

[[bench]]
name = "bench"
harness = false

