[package]
name = "snowflake_me"
version = "2.0.0"
authors = ["houseme <housemecn@gmail.com> and housemen <houseme@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
homepage = "https://github.com/houseme/snowflake-rs"
repository = "https://github.com/houseme/snowflake-rs"
documentation = "https://docs.rs/snowflake_me/"
readme = "README.md"
keywords = ["snowflake", "random", "id", "generator", "uniqueness"]
categories = ["development-tools", "data-structures", "algorithms"]
edition = "2024"

[features]
default = ["std"]
std = ["dep:jiff", "jiff/std", "thiserror/std"]
ip-fallback = ["std", "dep:pnet_datalink"]
serde = ["dep:serde"]
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]
use-strong-cas = []
full = ["std", "serde", "tracing", "metrics", "ip-fallback"]

[dependencies]
jiff = { version = "0.2.28", default-features = false, optional = true }
thiserror = { version = "2.0.18", default-features = false }
pnet_datalink = { version = "0.35.0", default-features = false, optional = true }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
criterion = "0.8.2"
num_cpus = "1.17.0"
proptest = "1"
serde_json = "1"
tracing-subscriber = "0.3"
metrics-util = "0.20.4"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "serde_example"
required-features = ["serde"]

